--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -5,13 +5,24 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/alarm_time"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="08:00"
-        android:textSize="18sp" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/alarm_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="08:00"
+            android:textSize="18sp" />
+        <TextView
+            android:id="@+id/alarm_medicine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="약 이름"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <Switch
         android:id="@+id/alarm_switch"
@@ -20,7 +31,7 @@
 
     <Button
         android:id="@+id/delete_alarm_button"
-        android:layout_width="130px"
+        android:layout_width="150px"
         android:layout_height="wrap_content"
         android:text="x" />
 </LinearLayout>
