--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -10,18 +10,20 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/alarm_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="08:00"
-            android:textSize="18sp" />
+            android:text="00:00"
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/alarm_medicine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="약 이름"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
     </LinearLayout>
 
     <Switch
@@ -33,5 +35,6 @@
         android:id="@+id/delete_alarm_button"
         android:layout_width="150px"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15px"
         android:text="x" />
 </LinearLayout>
