--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,8 +18,8 @@
                 android:id="@+id/itemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/favorite_button"
-                android:layout_toLeftOf="@id/favorite_button"
+                android:layout_toStartOf="@id/favorite_btn"
+                android:layout_toLeftOf="@id/favorite_btn"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:text="Item Name"
@@ -29,7 +29,7 @@
                 android:layout_marginRight="8dp" />
 
             <Button
-                android:id="@+id/favorite_button"
+                android:id="@+id/favorite_btn"
                 android:layout_width="150px"
                 android:layout_height="wrap_content"
                 android:text="☆"
@@ -130,70 +130,6 @@
 
         <TextView
             android:id="@+id/formCodeName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_marginBottom="13dp" />
-
-        <TextView
-            android:id="@+id/validTermLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Valid Term"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:layout_marginBottom="4dp" />
-
-        <TextView
-            android:id="@+id/validTerm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_marginBottom="13dp" />
-
-        <TextView
-            android:id="@+id/eeDocDataLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="EE Doc Data"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:layout_marginBottom="4dp" />
-
-        <TextView
-            android:id="@+id/eeDocData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_marginBottom="13dp" />
-
-        <TextView
-            android:id="@+id/udDocDataLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="UD Doc Data"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:layout_marginBottom="4dp" />
-
-        <TextView
-            android:id="@+id/udDocData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_marginBottom="13dp" />
-
-        <TextView
-            android:id="@+id/nbDocDataLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="NB Doc Data"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:layout_marginBottom="4dp" />
-
-        <TextView
-            android:id="@+id/nbDocData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
