--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/news_list_view"
+        android:id="@+id/news_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
