--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -18,7 +18,7 @@
              />
 
         <ImageView
-            android:id="@+id/news_detail_image"
+            android:id="@+id/news_detail_img"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
