--- a/app/src/main/res/layout/medicine_list_item.xml
+++ b/app/src/main/res/layout/medicine_list_item.xml
@@ -14,7 +14,7 @@
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/favorite_button"
+        android:id="@+id/favorite_btn"
         android:layout_width="150px"
         android:layout_height="wrap_content"
         android:text="☆" />
